<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileActivity">

    <TextView
        android:id="@+id/textProfileId"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center_vertical"
        android:text="@string/profile_activity"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textProfileId"
        app:srcCompat="@drawable/image_profile" />



        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageProfile"
            app:layout_constraintTop_toBottomOf="@+id/textProfileId">

            <TextView
                android:id="@+id/Person"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/black"
                android:text="@string/person_name" />

            <TextView
                android:id="@+id/Status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat_light_italic"
                android:textColor="@color/gray"
                android:text="@string/person_status" />
        </LinearLayout>




    <androidx.cardview.widget.CardView
        android:id="@+id/cardCity"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProfile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textCity"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/montserrat"
                android:text="Город"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textNameOfCity"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/city"
                android:textColor="@color/black"

                android:textSize="18sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPhone"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardCity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textPhone"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/montserrat"
                android:text="Телефон"
                android:textColor="@color/gray"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/phone"
                android:textColor="@color/black"

                android:textSize="18sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardMail"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardPhone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textMail"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/montserrat"
                android:text="Почта"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textNameOfMail"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/email"
                android:textColor="@color/black"

                android:textSize="18sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/bNavigator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_go_out" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bNavigator"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:itemIconTint="@drawable/botton_nav_selector"
        app:itemTextColor="@color/color_nav_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/botton_menu" />



</androidx.constraintlayout.widget.ConstraintLayout>